-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.8, 6.6.1
-
None
-
-
db7267cd6 (dev), fa415aa37 (6.7), c59880a48 (6.6), 2affa3ab9 (tqtc/lts-6.5)
The QML Type Compiler reports ScrollIndicator and ScrollBar are not found.
Importing "QtQuick.Controls" from `qt_add_qml_module` has no effect on this issue.
To replicate the issue:
- Create QML project that has use of Type Compiler enabled
- In QML, create a ListView, and attach either a ScrollIndicator or a ScrollBar property
- Build program
Example code is attached. Important excerpts here:
// CMakeLists.txt
qt_add_qml_module(${PROJECT_NAME}
URI Experiments
RESOURCE_PREFIX /qt/qml/
IMPORTS
"QtQuick.Controls"
DEPENDENCIES
QtQuick
QML_FILES
"main.qml"
ENABLE_TYPE_COMPILER
)
// .qml file
import QtQuick.Controls
ListView {
{{ ScrollIndicator.vertical: ScrollIndicator { }}}
}
ListView {
{{ ScrollBar.vertical: ScrollBar { }}}
}{}
- depends on
-
QTBUG-96040
(qmltc) Support build infrastructure around object-creation compiler
-
- Open
-
- relates to
-
QTBUG-119121 [qmltc] A QML file which imports qtquick.controls2 does not compile
-
- Closed
-
| For Gerrit Dashboard: QTBUG-121592 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 540123,5 | qmltc: warn about QML defined types from other modules | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 541283,2 | qmltc: warn about QML defined types from other modules | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 541646,2 | qmltc: warn about QML defined types from other modules | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 541793,3 | qmltc: warn about QML defined types from other modules | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |