tests/auto/qml/qmltc_qprocess/data/QmlBaseFromAnotherModule.qml
@@ -1,0 +1,13 @@
+import QtQml
+import QtQuick
+import QtQuick.Controls.Basic
+import QtQuick.Window
+
+Item {
+    property ScrollBar myBar: ScrollBar {}
+    function f(a: ScrollBar): ScrollBar {}
+
+    // C++ defined QML types from other modules are fine
+    property Item myItem: Item {}
+    function g(a: Item): Item {}
+}
